[package]
name = "bittorrent-client"
version = "0.1.0"
authors = ["Tabare Garcia Piniñor <tabareg14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2.0"
serde_bytes = "0.11"
reqwest = { version = "0.10", features = ["blocking"] }
rand = "0.7"
sha-1 = "0.8"
percent-encoding = "2.1"
byteorder = "1.3"
